--- a/trunk/vba2b/vba2/mainwindow.ui
+++ b/trunk/vba2b/vba2/mainwindow.ui
@@ -13,6 +13,15 @@
   <property name="windowTitle">
    <string>MainWindow</string>
   </property>
+  <property name="iconSize">
+   <size>
+    <width>24</width>
+    <height>24</height>
+   </size>
+  </property>
+  <property name="toolButtonStyle">
+   <enum>Qt::ToolButtonIconOnly</enum>
+  </property>
   <widget class="QWidget" name="centralWidget"/>
   <widget class="QStatusBar" name="statusBar"/>
   <widget class="QToolBar" name="toolBar">
@@ -27,8 +36,8 @@
    </property>
    <property name="iconSize">
     <size>
-     <width>32</width>
-     <height>32</height>
+     <width>48</width>
+     <height>48</height>
     </size>
    </property>
    <property name="toolButtonStyle">
@@ -64,7 +73,7 @@
   </widget>
   <action name="actionLoad_ROM">
    <property name="icon">
-    <iconset>
+    <iconset resource="resource/resource.qrc">
      <normaloff>:/MainWindow/loadCartridge.png</normaloff>:/MainWindow/loadCartridge.png</iconset>
    </property>
    <property name="text">
@@ -76,7 +85,7 @@
   </action>
   <action name="actionUnload_ROM">
    <property name="icon">
-    <iconset>
+    <iconset resource="resource/resource.qrc">
      <normaloff>:/MainWindow/unloadCartridge.png</normaloff>:/MainWindow/unloadCartridge.png</iconset>
    </property>
    <property name="text">
@@ -91,7 +100,7 @@
     <bool>false</bool>
    </property>
    <property name="icon">
-    <iconset>
+    <iconset resource="resource/resource.qrc">
      <normaloff>:/MainWindow/play_button.png</normaloff>:/MainWindow/play_button.png</iconset>
    </property>
    <property name="text">
@@ -103,6 +112,8 @@
   </action>
  </widget>
  <layoutdefault spacing="6" margin="11"/>
- <resources/>
+ <resources>
+  <include location="resource/resource.qrc"/>
+ </resources>
  <connections/>
 </ui>
