--- a/trunk/vba2b/vba2/mainwindow.ui
+++ b/trunk/vba2b/vba2/mainwindow.ui
@@ -73,7 +73,7 @@
   </widget>
   <action name="actionLoad_ROM">
    <property name="icon">
-    <iconset resource="resource/resource.qrc">
+    <iconset>
      <normaloff>:/MainWindow/loadCartridge.png</normaloff>:/MainWindow/loadCartridge.png</iconset>
    </property>
    <property name="text">
@@ -85,7 +85,7 @@
   </action>
   <action name="actionUnload_ROM">
    <property name="icon">
-    <iconset resource="resource/resource.qrc">
+    <iconset>
      <normaloff>:/MainWindow/unloadCartridge.png</normaloff>:/MainWindow/unloadCartridge.png</iconset>
    </property>
    <property name="text">
@@ -100,7 +100,7 @@
     <bool>false</bool>
    </property>
    <property name="icon">
-    <iconset resource="resource/resource.qrc">
+    <iconset>
      <normaloff>:/MainWindow/play_button.png</normaloff>:/MainWindow/play_button.png</iconset>
    </property>
    <property name="text">
@@ -112,8 +112,6 @@
   </action>
  </widget>
  <layoutdefault spacing="6" margin="11"/>
- <resources>
-  <include location="resource/resource.qrc"/>
- </resources>
+ <resources/>
  <connections/>
 </ui>
