--- a/trunk/vba2b/vba2/mainwindow.ui
+++ b/trunk/vba2b/vba2/mainwindow.ui
@@ -11,7 +11,7 @@
    </rect>
   </property>
   <property name="windowTitle">
-   <string>MainWindow</string>
+   <string>VisualBoyAdvance 2</string>
   </property>
   <property name="iconSize">
    <size>
@@ -73,7 +73,7 @@
   </widget>
   <action name="actionLoad_ROM">
    <property name="icon">
-    <iconset>
+    <iconset resource="resource/resource.qrc">
      <normaloff>:/MainWindow/loadCartridge.png</normaloff>:/MainWindow/loadCartridge.png</iconset>
    </property>
    <property name="text">
@@ -85,7 +85,7 @@
   </action>
   <action name="actionUnload_ROM">
    <property name="icon">
-    <iconset>
+    <iconset resource="resource/resource.qrc">
      <normaloff>:/MainWindow/unloadCartridge.png</normaloff>:/MainWindow/unloadCartridge.png</iconset>
    </property>
    <property name="text">
@@ -100,7 +100,7 @@
     <bool>false</bool>
    </property>
    <property name="icon">
-    <iconset>
+    <iconset resource="resource/resource.qrc">
      <normaloff>:/MainWindow/play_button.png</normaloff>:/MainWindow/play_button.png</iconset>
    </property>
    <property name="text">
@@ -112,6 +112,8 @@
   </action>
  </widget>
  <layoutdefault spacing="6" margin="11"/>
- <resources/>
+ <resources>
+  <include location="resource/resource.qrc"/>
+ </resources>
  <connections/>
 </ui>
