--- a/trunk/vba2/vba2/mainwindow.ui
+++ b/trunk/vba2/vba2/mainwindow.ui
@@ -13,6 +13,9 @@
   <property name="windowTitle">
    <string>VisualBoyAdvance 2</string>
   </property>
+  <property name="locale">
+   <locale language="English" country="UnitedStates"/>
+  </property>
   <property name="iconSize">
    <size>
     <width>24</width>
@@ -50,8 +53,9 @@
     <bool>false</bool>
    </attribute>
    <addaction name="actionLoad_ROM"/>
-   <addaction name="actionUnload_ROM"/>
    <addaction name="actionPlay_Pause"/>
+   <addaction name="separator"/>
+   <addaction name="actionSettings"/>
   </widget>
   <widget class="QMenuBar" name="menuBar">
    <property name="geometry">
@@ -59,7 +63,7 @@
      <x>0</x>
      <y>0</y>
      <width>497</width>
-     <height>22</height>
+     <height>21</height>
     </rect>
    </property>
    <widget class="QMenu" name="menuFile">
@@ -108,6 +112,15 @@
    </property>
    <property name="shortcut">
     <string>Ctrl+P</string>
+   </property>
+  </action>
+  <action name="actionSettings">
+   <property name="icon">
+    <iconset resource="resource/resource.qrc">
+     <normaloff>:/MainWindow/settings.png</normaloff>:/MainWindow/settings.png</iconset>
+   </property>
+   <property name="text">
+    <string>Settings...</string>
    </property>
   </action>
  </widget>
