--- a/trunk/vba2/vba2/resource/resource.qrc
+++ b/trunk/vba2/vba2/resource/resource.qrc
@@ -1,9 +1,12 @@
 <RCC>
-    <qresource prefix="/MainWindow" >
+    <qresource prefix="/MainWindow">
         <file>loadCartridge.png</file>
         <file>unloadCartridge.png</file>
         <file>pause_button.png</file>
         <file>play_button.png</file>
         <file>stop_button.png</file>
+        <file>keyboard.png</file>
+        <file>settings.png</file>
+        <file>sound.png</file>
     </qresource>
 </RCC>
