--- a/trunk/vba2/vba2/settings/framedialog.ui
+++ b/trunk/vba2/vba2/settings/framedialog.ui
@@ -30,54 +30,32 @@
       <widget class="QListWidget" name="listWidget">
        <property name="minimumSize">
         <size>
-         <width>128</width>
-         <height>128</height>
+         <width>200</width>
+         <height>0</height>
         </size>
        </property>
        <property name="horizontalScrollBarPolicy">
         <enum>Qt::ScrollBarAlwaysOff</enum>
-       </property>
-       <property name="showDropIndicator" stdset="0">
-        <bool>false</bool>
-       </property>
-       <property name="dragDropMode">
-        <enum>QAbstractItemView::NoDragDrop</enum>
        </property>
        <property name="alternatingRowColors">
         <bool>true</bool>
        </property>
        <property name="iconSize">
         <size>
-         <width>64</width>
-         <height>64</height>
+         <width>48</width>
+         <height>48</height>
         </size>
        </property>
        <property name="verticalScrollMode">
         <enum>QAbstractItemView::ScrollPerPixel</enum>
        </property>
-       <property name="horizontalScrollMode">
-        <enum>QAbstractItemView::ScrollPerPixel</enum>
-       </property>
-       <property name="resizeMode">
-        <enum>QListView::Fixed</enum>
-       </property>
-       <property name="viewMode">
-        <enum>QListView::ListMode</enum>
-       </property>
-       <property name="selectionRectVisible">
-        <bool>false</bool>
+       <property name="currentRow">
+        <number>-1</number>
        </property>
       </widget>
      </item>
      <item>
-      <widget class="QStackedWidget" name="stackedWidget">
-       <property name="minimumSize">
-        <size>
-         <width>128</width>
-         <height>128</height>
-        </size>
-       </property>
-      </widget>
+      <widget class="QStackedWidget" name="stackedWidget"/>
      </item>
     </layout>
    </item>
