--- a/trunk/vba2/vba2/settings/settingssheet_audiooutput.ui
+++ b/trunk/vba2/vba2/settings/settingssheet_audiooutput.ui
@@ -2,14 +2,6 @@
 <ui version="4.0">
  <class>SettingsSheet_AudioOutput</class>
  <widget class="QWidget" name="SettingsSheet_AudioOutput">
-  <property name="geometry">
-   <rect>
-    <x>0</x>
-    <y>0</y>
-    <width>400</width>
-    <height>300</height>
-   </rect>
-  </property>
   <property name="windowTitle">
    <string>Audio Output</string>
   </property>
@@ -17,19 +9,22 @@
    <iconset resource="../resource/resource.qrc">
     <normaloff>:/MainWindow/sound.png</normaloff>:/MainWindow/sound.png</iconset>
   </property>
-  <widget class="QPushButton" name="pushButton">
-   <property name="geometry">
-    <rect>
-     <x>90</x>
-     <y>80</y>
-     <width>181</width>
-     <height>51</height>
-    </rect>
-   </property>
-   <property name="text">
-    <string>Select Audio Device here</string>
-   </property>
-  </widget>
+  <layout class="QFormLayout">
+   <item row="0" column="0">
+    <widget class="QLabel" name="label">
+     <property name="text">
+      <string>Audio Output Device</string>
+     </property>
+    </widget>
+   </item>
+   <item row="0" column="1">
+    <widget class="QComboBox" name="comboBox_device">
+     <property name="sizeAdjustPolicy">
+      <enum>QComboBox::AdjustToContents</enum>
+     </property>
+    </widget>
+   </item>
+  </layout>
  </widget>
  <resources>
   <include location="../resource/resource.qrc"/>
