--- a/trunk/vba2/vba2/resource/resource.qrc
+++ b/trunk/vba2/vba2/resource/resource.qrc
@@ -8,5 +8,6 @@
         <file>keyboard.png</file>
         <file>settings.png</file>
         <file>sound.png</file>
+        <file>folder.png</file>
     </qresource>
 </RCC>
