--- a/trunk/vba2/vba2/settings/settingssheet_directories.ui
+++ b/trunk/vba2/vba2/settings/settingssheet_directories.ui
@@ -26,7 +26,11 @@
     </widget>
    </item>
    <item row="0" column="1">
-    <widget class="QLineEdit" name="lineEditGameCartridges"/>
+    <widget class="QLineEdit" name="lineEditGameCartridges">
+     <property name="toolTip">
+      <string>This directory should contain the ROM dumps of the game cartridges.</string>
+     </property>
+    </widget>
    </item>
    <item row="0" column="2">
     <widget class="QPushButton" name="pushButtonGameCartridges">
@@ -43,7 +47,11 @@
     </widget>
    </item>
    <item row="1" column="1">
-    <widget class="QLineEdit" name="lineEditCartridgeSaves"/>
+    <widget class="QLineEdit" name="lineEditCartridgeSaves">
+     <property name="toolTip">
+      <string>This directory will be used to store game save data compatible to the original hardware.</string>
+     </property>
+    </widget>
    </item>
    <item row="1" column="2">
     <widget class="QPushButton" name="pushButtonCartridgeSaves">
