--- a/trunk/vba2/vba2/mainwindow.ui
+++ b/trunk/vba2/vba2/mainwindow.ui
@@ -66,7 +66,7 @@
      <x>0</x>
      <y>0</y>
      <width>497</width>
-     <height>26</height>
+     <height>21</height>
     </rect>
    </property>
    <widget class="QMenu" name="menuFile">
@@ -103,15 +103,12 @@
    </property>
   </action>
   <action name="actionPlay_Pause">
-   <property name="enabled">
-    <bool>false</bool>
-   </property>
    <property name="icon">
     <iconset resource="resource/resource.qrc">
-     <normaloff>:/MainWindow/play_button.png</normaloff>:/MainWindow/play_button.png</iconset>
+     <normaloff>:/MainWindow/pause_button.png</normaloff>:/MainWindow/pause_button.png</iconset>
    </property>
    <property name="text">
-    <string>Play / Pause</string>
+    <string>Pause</string>
    </property>
    <property name="shortcut">
     <string>Ctrl+P</string>
