add recent files to menu

--- a/trunk/vba2/vba2/mainwindow.ui
+++ b/trunk/vba2/vba2/mainwindow.ui
@@ -75,12 +75,14 @@
     </property>
     <addaction name="actionLoad_ROM"/>
     <addaction name="actionUnload_ROM"/>
+    <addaction name="separator"/>
+    <addaction name="actionRecent_Files"/>
    </widget>
    <addaction name="menuFile"/>
   </widget>
   <action name="actionLoad_ROM">
    <property name="icon">
-    <iconset resource="resource/resource.qrc">
+    <iconset>
      <normaloff>:/MainWindow/loadCartridge.png</normaloff>:/MainWindow/loadCartridge.png</iconset>
    </property>
    <property name="text">
@@ -92,7 +94,7 @@
   </action>
   <action name="actionUnload_ROM">
    <property name="icon">
-    <iconset resource="resource/resource.qrc">
+    <iconset>
      <normaloff>:/MainWindow/unloadCartridge.png</normaloff>:/MainWindow/unloadCartridge.png</iconset>
    </property>
    <property name="text">
@@ -104,7 +106,7 @@
   </action>
   <action name="actionPlay_Pause">
    <property name="icon">
-    <iconset resource="resource/resource.qrc">
+    <iconset>
      <normaloff>:/MainWindow/pause_button.png</normaloff>:/MainWindow/pause_button.png</iconset>
    </property>
    <property name="text">
@@ -116,17 +118,23 @@
   </action>
   <action name="actionSettings">
    <property name="icon">
-    <iconset resource="resource/resource.qrc">
+    <iconset>
      <normaloff>:/MainWindow/settings.png</normaloff>:/MainWindow/settings.png</iconset>
    </property>
    <property name="text">
     <string>Settings...</string>
    </property>
   </action>
+  <action name="actionRecent_Files">
+   <property name="enabled">
+    <bool>false</bool>
+   </property>
+   <property name="text">
+    <string>Recent Files</string>
+   </property>
+  </action>
  </widget>
  <layoutdefault spacing="6" margin="11"/>
- <resources>
-  <include location="resource/resource.qrc"/>
- </resources>
+ <resources/>
  <connections/>
 </ui>
