--- a/trunk/vba2/vba2/mainwindow.ui
+++ b/trunk/vba2/vba2/mainwindow.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>497</width>
-    <height>332</height>
+    <width>640</width>
+    <height>480</height>
    </rect>
   </property>
   <property name="acceptDrops">
@@ -65,7 +65,7 @@
     <rect>
      <x>0</x>
      <y>0</y>
-     <width>497</width>
+     <width>640</width>
      <height>21</height>
     </rect>
    </property>
@@ -82,7 +82,7 @@
   </widget>
   <action name="actionLoad_ROM">
    <property name="icon">
-    <iconset>
+    <iconset resource="resource/resource.qrc">
      <normaloff>:/MainWindow/loadCartridge.png</normaloff>:/MainWindow/loadCartridge.png</iconset>
    </property>
    <property name="text">
@@ -94,7 +94,7 @@
   </action>
   <action name="actionUnload_ROM">
    <property name="icon">
-    <iconset>
+    <iconset resource="resource/resource.qrc">
      <normaloff>:/MainWindow/unloadCartridge.png</normaloff>:/MainWindow/unloadCartridge.png</iconset>
    </property>
    <property name="text">
@@ -106,7 +106,7 @@
   </action>
   <action name="actionPlay_Pause">
    <property name="icon">
-    <iconset>
+    <iconset resource="resource/resource.qrc">
      <normaloff>:/MainWindow/pause_button.png</normaloff>:/MainWindow/pause_button.png</iconset>
    </property>
    <property name="text">
@@ -118,7 +118,7 @@
   </action>
   <action name="actionSettings">
    <property name="icon">
-    <iconset>
+    <iconset resource="resource/resource.qrc">
      <normaloff>:/MainWindow/settings.png</normaloff>:/MainWindow/settings.png</iconset>
    </property>
    <property name="text">
@@ -135,6 +135,8 @@
   </action>
  </widget>
  <layoutdefault spacing="6" margin="11"/>
- <resources/>
+ <resources>
+  <include location="resource/resource.qrc"/>
+ </resources>
  <connections/>
 </ui>
