--- a/trunk/vba2/vba2/settings/settingssheet_keyboardinput.ui
+++ b/trunk/vba2/vba2/settings/settingssheet_keyboardinput.ui
@@ -15,7 +15,7 @@
   </property>
   <property name="windowIcon">
    <iconset resource="../resource/resource.qrc">
-    <normaloff>:/MainWindow/keyboard.png</normaloff>:/MainWindow/keyboard.png</iconset>
+    <normaloff>:/Settings/keyboard.png</normaloff>:/Settings/keyboard.png</iconset>
   </property>
   <widget class="QPushButton" name="pushButton">
    <property name="geometry">
