--- a/trunk/vba2/vba2/resource/resource.qrc
+++ b/trunk/vba2/vba2/resource/resource.qrc
@@ -5,9 +5,12 @@
         <file>pause_button.png</file>
         <file>play_button.png</file>
         <file>stop_button.png</file>
-        <file>keyboard.png</file>
         <file>settings.png</file>
-        <file>sound.png</file>
+    </qresource>
+    <qresource prefix="/Settings">
+        <file>display.png</file>
         <file>folder.png</file>
+        <file>keyboard.png</file>
+        <file>sound.png</file>
     </qresource>
 </RCC>
